--- a/index.html
+++ b/index.html
@@ -2,13 +2,36 @@
 <html>
     <head>
     <title>My Portfolio</title>
+    <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
     <body>
-        <link href="./style.css" rel="stylesheet" type="text/css">
+        <nav class="navigator">
+            <ul>
+                <li>
+                    <div id="heading">
+                        <a href="#home">Home</a>
+                    </div>
+                </li>
+                <li><div id="heading">
+                    <a href="./Experience.html" target="_blank">Experience</a>
+                </div></li>
+                <li>
+                    <div id="heading">
+                        <a href="./Project.html" target="_blank">Projects</a>
+                    </div>
+                </li>
+                <li>
+                    <div id="heading">
+                        <!-- <a href="#honors"><h2 id="heading">Honors</h2></a> -->
+                        <a href="./Honors.html">Honors</a>
+                      </div>
+                </li>
+            </ul>
+        </nav>
         <h1>Srisai Bodduluri</h1>
         <h2>My Profile</h2>
         <img src="Profile.jpeg" width="250px" height="250px"/>
-        <div>
+        <div id="home">
             <p> <strong>My Bio:</strong> A dynamic and adaptable Full Stack Engineer with a demonstrated history of successful teamwork and a genuine passion 
                 for advancing software capabilities. Proficient in full-stack development, I am actively pursuing developer roles to apply my
                  expertise in extensive database management, Java frameworks, and front-end technologies.Acknowledged for 
@@ -28,16 +51,8 @@
             <li>Automation</li>
         </ul>
         </div>
-        <div id="heading">
-            <a href="./Experience.html" target="_blank">Experience</a>
-        </div>
-        <div id="heading">
-            <a href="./Project.html" target="_blank">Projects</a>
-        </div>
-       <div id="heading">
-         <!-- <a href="#honors"><h2 id="heading">Honors</h2></a> -->
-         <a href="./Honors.html">Honors</a>
-       </div>
+        
+       
        <!--
        <div id="honors">
         <h1>Honors</h1>
