--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <h1>Srisai Bodduluri</h1>
         <h2>My Profile</h2>
-        <img src="Profile.jpeg" width="250px" height="250px"/>
+        <img src="Profile.jpeg" width="250px" height="250px" id="profile-image"/>
         <div id="home">
             <p> <strong>My Bio:</strong> A dynamic and adaptable Full Stack Engineer with a demonstrated history of successful teamwork and a genuine passion 
                 for advancing software capabilities. Proficient in full-stack development, I am actively pursuing developer roles to apply my
